unpackaged/main/default/objects/Branch__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <label>Address City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>