unpackaged/main/default/objects/Branch__c/fields/Address_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Address_Coordinates__c</fullName>
    <label>Address Coordinates</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>