unpackaged/main/default/objects/Branch__c/fields/Address_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Address_Postal_Code__c</fullName>
    <label>Address Postal Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>