unpackaged/main/default/objects/Branch__c/fields/Address_Province_State__c.field-meta.xml
<CustomField>
    <fullName>Address_Province_State__c</fullName>
    <label>Address Province/State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>