unpackaged/main/default/objects/Branch__c/fields/Address_Street__c.field-meta.xml
<CustomField>
    <fullName>Address_Street__c</fullName>
    <label>Address Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>