unpackaged/main/default/objects/Branch__c/fields/Approver_A__c.field-meta.xml
<CustomField>
    <fullName>Approver_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix level A Approver - pulled from Branch</description>
    <inlineHelpText>Authority Matrix level A Approver - pulled from Branch</inlineHelpText>
    <label>Approver A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches_A</relationshipName>
    <type>Lookup</type>
</CustomField>