unpackaged/main/default/objects/Branch__c/fields/Approver_D__c.field-meta.xml
<CustomField>
    <fullName>Approver_D__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix level D Approver - pulled from Branch</description>
    <inlineHelpText>Authority Matrix level D Approver - pulled from Branch</inlineHelpText>
    <label>Approver D</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches_D</relationshipName>
    <type>Lookup</type>
</CustomField>