unpackaged/main/default/objects/Branch__c/fields/Approver_F__c.field-meta.xml
<CustomField>
    <fullName>Approver_F__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix level F Approver - pulled from Branch</description>
    <inlineHelpText>Authority Matrix level F Approver - pulled from Branch</inlineHelpText>
    <label>Approver F</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches_F</relationshipName>
    <type>Lookup</type>
</CustomField>