unpackaged/main/default/objects/Branch__c/fields/Approver_I__c.field-meta.xml
<CustomField>
    <fullName>Approver_I__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Authority Matrix level I Approver - pulled from Branch</description>
    <inlineHelpText>Authority Matrix level I Approver - pulled from Branch</inlineHelpText>
    <label>Approver I</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches_I</relationshipName>
    <type>Lookup</type>
</CustomField>