unpackaged/main/default/objects/Branch__c/fields/Bidsheet_Template_Group__c.field-meta.xml
<CustomField>
    <fullName>Bidsheet_Template_Group__c</fullName>
    <label>Bidsheet Template Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>