unpackaged/main/default/objects/Branch__c/fields/Branch_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Branch_Display_Name__c</fullName>
    <description>For use on Quotes and Contract documents.</description>
    <inlineHelpText>For use on Quotes and Contract documents.</inlineHelpText>
    <label>Branch Display Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>