unpackaged/main/default/objects/Branch__c/fields/Branch_Fax__c.field-meta.xml
<CustomField>
    <fullName>Branch_Fax__c</fullName>
    <label>Branch Fax</label>
    <type>Phone</type>
</CustomField>