unpackaged/main/default/objects/Branch__c/fields/Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches</relationshipName>
    <type>Lookup</type>
</CustomField>