unpackaged/main/default/objects/Branch__c/fields/CA_Public_Group_API_Name__c.field-meta.xml
<CustomField>
    <fullName>CA_Public_Group_API_Name__c</fullName>
    <label>CA Public Group API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>