unpackaged/main/default/objects/Branch__c/fields/Conga_Template_Group__c.field-meta.xml
<CustomField>
    <fullName>Conga_Template_Group__c</fullName>
    <description>Used to filter list of Conga Templates for a quote</description>
    <inlineHelpText>Used to filter list of Conga Templates for a quote</inlineHelpText>
    <label>Conga Template Group</label>
    <length>8</length>
    <type>Text</type>
</CustomField>