unpackaged/main/default/objects/Branch__c/fields/Engineering_Approver__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GM Engineering Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches2</relationshipName>
    <type>Lookup</type>
</CustomField>