unpackaged/main/default/objects/Branch__c/fields/GM_Construction_Approver__c.field-meta.xml
<CustomField>
    <fullName>GM_Construction_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GM Construction Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches3</relationshipName>
    <type>Lookup</type>
</CustomField>