unpackaged/main/default/objects/Branch__c/fields/GM_Major_Projects_Designated_BM__c.field-meta.xml
<CustomField>
    <fullName>GM_Major_Projects_Designated_BM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GM Major Projects Designated BM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches6</relationshipName>
    <type>Lookup</type>
</CustomField>