unpackaged/main/default/objects/Branch__c/fields/Google_Review_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Review_URL__c</fullName>
    <description>Google review URL for each branch</description>
    <inlineHelpText>Enter URL for this branch for google reviews.</inlineHelpText>
    <label>Google Review URL</label>
    <type>Url</type>
</CustomField>