unpackaged/main/default/objects/Branch__c/fields/Handover_Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>Handover_Flow_Type__c</fullName>
    <description>Used as a trigger during Handover to determine which notifications to run during Project Handover approval</description>
    <inlineHelpText>Handover notification trigger</inlineHelpText>
    <label>Handover Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Camp</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>