unpackaged/main/default/objects/Branch__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <formula>IF( Logo_URL__c ="", null, IMAGE( Logo_URL__c ,Name, -200,200))</formula>
    <label>Logo</label>
    <type>Text</type>
</CustomField>