unpackaged/main/default/objects/Branch__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <label>Logo URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>