unpackaged/main/default/objects/Branch__c/fields/New_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Branch_Code__c</fullName>
    <label>New Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>