unpackaged/main/default/objects/Branch__c/fields/Project_Manager_Approver__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GM Designated Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches4</relationshipName>
    <type>Lookup</type>
</CustomField>