unpackaged/main/default/objects/Branch__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Division__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>