unpackaged/main/default/objects/Branch__c/fields/Transactional_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>Transactional_Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transactional Branch Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Branches7</relationshipName>
    <type>Lookup</type>
</CustomField>