unpackaged/main/default/objects/Branch__c/listViews/Active_Branches.listView-meta.xml
<ListView>
    <fullName>Active_Branches</fullName>
    <columns>NAME</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_Province_State__c</columns>
    <columns>Address_Postal_Code__c</columns>
    <columns>Address_Country__c</columns>
    <columns>Branch_Code__c</columns>
    <columns>Branch_Manager__c</columns>
    <columns>Branch_Phone__c</columns>
    <columns>Division__c</columns>
    <columns>Region__c</columns>
    <columns>Approver_E__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Branches</label>
</ListView>