unpackaged/main/default/objects/Branch__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Branch_Code__c</columns>
    <columns>Region__c</columns>
    <columns>NAME</columns>
    <columns>Address_Street__c</columns>
    <columns>Approver_A__c</columns>
    <columns>Approver_B__c</columns>
    <columns>Approver_C__c</columns>
    <columns>Approver_D__c</columns>
    <columns>Approver_E__c</columns>
    <columns>Approver_F__c</columns>
    <columns>Approver_G__c</columns>
    <columns>Approver_H__c</columns>
    <columns>Approver_I__c</columns>
    <columns>Conga_Template_Group__c</columns>
    <columns>Logo_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>