unpackaged/main/default/objects/Branch__c/listViews/Branch_Addresses.listView-meta.xml
<ListView>
    <fullName>Branch_Addresses</fullName>
    <columns>NAME</columns>
    <columns>Address_Street__c</columns>
    <columns>Address_City__c</columns>
    <columns>Address_Province_State__c</columns>
    <columns>Address_Postal_Code__c</columns>
    <columns>Address_Country__c</columns>
    <columns>Branch_Manager__c</columns>
    <columns>Branch_Phone__c</columns>
    <columns>Google_Review_URL__c</columns>
    <columns>Division__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Modular Solutions</value>
    </filters>
    <label>MSS Branch Addresses</label>
    <sharedTo>
        <group>All_BD_Users</group>
    </sharedTo>
</ListView>