unpackaged/main/default/objects/Branch__c/listViews/Branches_with_Approvers.listView-meta.xml
<ListView>
    <fullName>Branches_with_Approvers</fullName>
    <columns>Region__c</columns>
    <columns>NAME</columns>
    <columns>Address_City__c</columns>
    <columns>Branch_Manager__c</columns>
    <columns>Approver_I__c</columns>
    <columns>Approver_G__c</columns>
    <columns>Approver_E__c</columns>
    <columns>Approver_D__c</columns>
    <columns>Approver_C__c</columns>
    <columns>Approver_B__c</columns>
    <columns>Approver_A__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Region__c</field>
        <operation>contains</operation>
        <value>mss us</value>
    </filters>
    <label>Branches with Approvers Query</label>
</ListView>